--- a/src/front/src/app/components/note-list/note-list.component.html
+++ b/src/front/src/app/components/note-list/note-list.component.html
@@ -30,3 +30,7 @@
     </div>
   </div>
 </div>
+
+<div *ngIf="isMoreLoading" class="more-loading">
+  <mat-spinner diameter="40"></mat-spinner>
+</div>
