--- a/src/front/src/app/components/notes/movie-note/movie-note.component.css
+++ b/src/front/src/app/components/notes/movie-note/movie-note.component.css
@@ -19,11 +19,17 @@
 }
 
 .gallery-placeholder {
-  background: #f5f5f5;
-  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 100px;
+  background-color: #f9f9f9;
+  border: 2px dashed #ddd;
   border-radius: 8px;
-  text-align: center;
-  color: #666;
+  color: #aaa;
+  font-style: italic;
+  margin-bottom: 10px;
 }
 
 .info-section {
@@ -52,4 +58,102 @@
     overflow-y: scroll;
     /* Переделать */
     max-height: calc(100vh - 64px - 20px - 32px);
+}
+
+.thumbnail img {
+    max-width: 100px;
+    max-height: 100px;
+    display: block;
+  }
+
+.metadata {
+  background-color: #f0f0f0;
+  padding: 15px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  border: 1px solid #e0e0e0;
+}
+
+.metadata h3 {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-size: 1.2em;
+  color: #333;
+  border-bottom: 2px solid #ccc;
+  padding-bottom: 10px;
+}
+
+.metadata ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.metadata > ul > li {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: baseline;
+}
+
+.metadata strong {
+  color: #555;
+  min-width: 180px;
+  display: inline-block;
+}
+
+.metadata .tag {
+  display: inline-block;
+  background-color: #007bff;
+  color: white;
+  padding: 3px 10px;
+  border-radius: 15px;
+  margin-right: 5px;
+  font-size: 0.9em;
+}
+
+.metadata .tag.rating-cringe {
+  background-color: #d9534f; /* Красный */
+}
+
+.metadata .tag.rating-meh {
+  background-color: #e85d45; /* Красно-оранжевый */
+}
+
+.metadata .tag.rating-norm {
+  background-color: #ffc107; /* Желтый */
+  color: #000;
+}
+
+.metadata .tag.rating-horosho {
+  background-color: #20c997; /* Бирюзовый */
+}
+
+.metadata .tag.rating-baza {
+  background-color: #5cb85c; /* Зеленый */
+}
+
+.metadata .tag.rating {
+    background-color: #28a745;
+}
+
+.metadata a {
+  color: #007bff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.metadata a:hover {
+  text-decoration: underline;
+}
+
+.actor-list {
+  list-style-type: circle !important;
+  padding-left: 20px !important;
+  margin: 5px 0 0 0 !important;
+}
+
+.actor-list li {
+  margin-bottom: 5px !important;
+  align-items: initial !important;
+  display: list-item !important;
 }
